myproject/inkle/static/css/home.css
.inkling
{
    border: solid 2px #288D42;
    background-color: #ABD4B0;
    width: 250px;
    padding: 10px;
    margin: 15px;
    float: left;
}

.inklingTitle
{
    margin: -7px 0px 3px 0px;
    font-size: 24px;
    text-align: center;
    font-weight: bold;
    color: #288D42;
}

.inklingImage
{
    width: 100%;
    border: solid 1px #000;
}

.inkling input
{
    margin-top: 5px;
    font-size: 18px;
    padding: 5px;
    width: 238px;
    border: inset 2px #BBB;
}

.pastInklingText
{
    margin-top: 5px;
    font-size: 18px;
    padding: 5px;
    height: 25px;
    color: #1B5898;
    text-align: center;
}

.inklingSuggestions
{
    width: 248px;
}

.locationBoardSelect
{
    padding: 3px 10px 3px 10px;
}

.inklingInviteContainer
{
    border: solid 2px #288D42;
    background-color: #ABD4B0;
    width: 250px;
    margin: 0px 16px 0px 16px;
    padding: 5px 10px 10px 10px;
    text-align: left;
    float: left;
}

.inklingInviteContainer input
{
    margin-top: 5px;
    font-size: 18px;
    padding: 5px;
    width: 175px;
    border: inset 2px #BBB;
    clear: left;
    float: left;
}

.inklingInviteButton
{
    float: left;
    background-color: #1B5898;
    border-color: #2A4360;
}

.inklingInviteButton:hover
{
    border-color: #002C45;
}

.inklingInviteSuggestions
{
    margin-top: 43px;
    width: 185px;
}

.invited
{
    clear: both;
}

.invitedPeople
{
    float: left;
    background-color: #1B5898;
    border: solid 2px #2A4360;
    margin: 10px 5px 0px 0px;
    padding: 3px;
    color: #FFF;
    font-size: 12px;
}

.invitedPeopleName
{
    float: left;
    margin-right: 5px;
}

.removeInvitedPeople
{
    float: left;
    background-color: #70A9DB;
    height: 11px;
    padding: 1px 2px 1px 2px;
    margin-top: 1px;
    border-radius: 2px;
    cursor: pointer;
}

.removeInvitedPeople:hover
{
    background-color: #E5736F;
}

.removeInvitedPeople p
{
    margin-top: -3px;
}

select, select option
{
    color: #1B5898;
    font-size: 14px;
}

#locationBoard
{
    margin-top: 20px;
}

/*.locationBoardCard
{
    border: solid 2px #288D42;
    background-color: #DDD;
    padding: 10px 10px 10px 0px;
    height: 130px;
    margin-bottom: 10px;
} */

.locationBoardCard
{
    height: 130px;
    border-radius: 7px;
}

.locationBoardCard:hover
{
    background: #ABC2E5;
    cursor: pointer;
}

.locationBoardCardCount
{
    /*border: solid 1px black;
    padding-top: 15px; */
    font-size: 32px;
    position: relative;
    height: 115px;
    text-align: center;
    font-weight: bold;
    color: #FFF;
    margin: 0px;
    /*background-color: #1B5898; */
    /*background-image:url('/static/media/images/main/blotblue.png');
    background:url(/static/media/images/main/blotblue.png);
    background-size:115px 115px;
    background-repeat:no-repeat;*/
}

.locationBoardCardCount img
{
    height: 130px;
    width: 130px;
}

.locationBoardCardCount .text
{
    position: absolute;
    top: 40%;
    width: 100%;
}

.locationBoardCardCount .text p
{
    text-align: center;
}

.locationBoardCardName
{
    margin-top: 3px;
    font-size: 32px;
    color: #288D42;
    text-decoration: none;
} 

.locationBoardCardText
{
    margin-top: 20px;
    width: 100%;
    overflow:hidden;
}

.hidden
{
    visibility: hidden;
}

